Fixed homepage image size on mobile.

--- a/styles/_homepage.scss
+++ b/styles/_homepage.scss
@@ -171,6 +171,11 @@ h1#logo {
             .tab-icon {
                 width: auto;
                 height: 25vh;
+
+                img {
+                    width: auto;
+                    height: 25vh;
+                }
             }
 
             .tab-name {
